--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,10 @@
 </head>
 
 <body>
+
+<script
+src="https://cdn.jsdelivr.net/npm/react-bootstrap@next/dist/react-bootstrap.min.js"
+crossorigin></script>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 </body>
